# evaluate-expression

./: CMakeLists.txt  README.md
inc/: exception_exp.h  expression.h  util.h
script/: run.sh  run_valgrind.sh
src/: expression.cpp  main.cpp  util.cpp
tests/: CMakeLists.txt  expressiontests.cpp  maintest.cpp  utiltests.cpp
